--- a/sass/web.campus/modules/teaser/_teaser-lead-portrait.sass
+++ b/sass/web.campus/modules/teaser/_teaser-lead-portrait.sass
@@ -60,8 +60,8 @@
 			position: relative
 			top: 0
 		&__title
-			font-size: remify(84px)
-			letter-spacing: em(1.5px)
+			font-size: remify(64px)
+			letter-spacing: remify(1.5px)
 			max-width: remify(780px)
 		&__text,
 		&__metadata
@@ -72,3 +72,5 @@
 	.teaser-lead-portrait
 		&__content
 			top: remify(69px)
+		&__title
+			font-size: remify(84px)
